--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Webview_setting_1"></activity>
+        <activity android:name=".Menu1_testinfo"></activity>
+        <activity android:name=".Webview_setting_1" />
         <activity
             android:name=".LoginActivity"
             android:noHistory="true"
