--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Menu2_testBookChoose"></activity>
+        <activity android:name=".Menu2_testBookChoose"/>
         <activity android:name=".Menu3_searchLibrary" />
         <activity android:name=".Menu1_testinfo" />
         <activity android:name=".Webview_setting_1" />
