--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'gun0912.ted:tedpermission:2.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     api 'org.jsoup:jsoup:1.11.3'
 }
