--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     api 'org.jsoup:jsoup:1.11.3'
+    api 'com.github.lzyzsd:circleprogress:1.2.1'
 }
