--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     api 'org.jsoup:jsoup:1.11.3'
     api 'com.github.lzyzsd:circleprogress:1.2.1'
+    implementation 'com.wdullaer:materialdatetimepicker:3.5.0'
 }
