[추가,수정,삭제]
-알림설정
-메인화면 예약정보 불러오는 데이타경로
sharedpref->json
-더이상 사용하지 않는 sharedpref삭제
-로그아웃시 sharedpref초기화

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
 * ******************************************
  -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".JSONParser"
@@ -38,6 +40,7 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait" />
+        <receiver android:name=".BroadcastD" android:process=":remote"/>
     </application>
 
 </manifest>
