[추가,수정]/최종build1.0
-alertdialog,progressdialog 라이브러리 교체
-라이브러리 교체에 따른 관련 코드 수정
-로그아웃시 알림정보삭제 안내고지
-알림설정관련 오류수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     api 'org.jsoup:jsoup:1.11.3'
     api 'com.github.lzyzsd:circleprogress:1.2.1'
     implementation 'com.wdullaer:materialdatetimepicker:3.5.0'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.6'
 }
